# github-build-test

./: CMakeLists.txt
.github/workflows/: github-actions.yml
app/: CMakeLists.txt  main.cpp
